# moai-sdk

./: .gitignore
ant/libmoai/jni/: Android.mk
cmake/: CMakeLists.txt
cmake/cmake-modules/: platform-windows-phone.cmake
cmake/hosts/host-plugin/: CMakeLists.txt
cmake/hosts/host-win-sdl/: CMakeLists.txt
cmake/libmoai/: CMakeLists.txt
cmake/libmoai/moai-android/: CMakeLists.txt  android-module.cmake
cmake/libmoai/moai-core/: CMakeLists.txt
cmake/libmoai/moai-iphone/: CMakeLists.txt
cmake/libmoai/moai-iphone/moai-ios-admob/: CMakeLists.txt
cmake/libmoai/moai-sim/: CMakeLists.txt
cmake/libmoai/moai-winrt/: CMakeLists.txt
cmake/libmoai/zlcore/: CMakeLists.txt
host-templates/windowsphone/vs2013/: Moai Template.sln
src/host-ios/: MOAIAppDelegate.mm
src/host-modules/: aku_modules.cpp  aku_modules.h  aku_modules_android.cpp  aku_modules_android.h  aku_modules_android_config.h  aku_modules_config.h  aku_modules_ios.h  aku_modules_ios.mm  aku_modules_ios_config.h  aku_modules_winrt.cpp  aku_modules_winrt.h  aku_modules_winrt_config.h
src/host-sdl/: MOAIDisplaySDL.cpp  MOAIDisplaySDL.h  SDLHost.cpp  SDLJoystick.cpp  SDLJoystick.h  imgui_impl_sdl_gl3.cpp
src/host-windows-phone/: app.cpp  app.h  app_main.cpp  pch.h
src/moai-android/: LinearLayoutIMETrap.java  Moai.java  MoaiKeyboard.java
src/moai-android-adcolony/java/: build.gradle
src/moai-android-admob/: MOAIAdmobAndroid.cpp  host.cpp  host.h
src/moai-android-amazon-billing/java/: build.gradle
src/moai-android-chartboost/java/: build.gradle
src/moai-android-crittercism/java/: build.gradle
src/moai-android-facebook/java/: build.gradle
src/moai-android-flurry/java/: build.gradle
src/moai-android-fortumo/java/: build.gradle
src/moai-android-google-billing/java/: build.gradle
src/moai-android-google-play-services/: MoaiGooglePlayServices.java  MoaiPlayServicesCallbacks.java
src/moai-android-google-play-services/java/: build.gradle
src/moai-android-google-push/java/: build.gradle
src/moai-android-tapjoy/java/: build.gradle
src/moai-android-twitter/java/: build.gradle
src/moai-android-vungle/java/: build.gradle
src/moai-android/java/: build.gradle
src/moai-core/: MOAIEnvironment.cpp  MOAILuaRuntime.cpp
src/moai-crypto/: host.cpp
src/moai-imgui/: MOAIImDrawList.cpp  MOAIImDrawList.h  MOAIImGui.cpp  MOAIImGui.h  MOAIImVec2.cpp  MOAIImVec2.h  MOAIImVec4.cpp  MOAIImVec4.h  headers.h  host.cpp  host.h
src/moai-ios-admob/: MOAIAdMobIOS.h  MOAIAdMobIOS.mm  host.h  host.mm
src/moai-sim/: MOAIEnvironment.cpp  MOAIGfxDevice.cpp  MOAIProfilerReportBox.cpp  MOAISim.cpp
src/moai-util/: MOAIByteStream.h  MOAIMutex_win32.cpp  MOAIThread_win32.cpp
src/moai-winrt/: MOAIKeyboardWinPhone.cpp  MOAIKeyboardWinPhone.h  host.cpp  host.h
src/zl-common/: zl_platform.h  zl_winrt_shim.cpp  zl_winrt_shim.h
src/zl-gfx/: zl_gfx_opengl.cpp
src/zl-util/: ZLAdapterInfo_win32.cpp  ZLUnique_win32.cpp  zl_wsocket.h
src/zl-vfs/: ZLVfsFile.cpp  ZLVfsFileSystem.cpp  headers.cpp  zl_mutex.cpp
util/: build-plugin.bat  pito.lua  util.lua
util/android-studio/: main.lua
util/android-studio/Moai/: build.gradle
util/build-sample-browser/: file_packager.lua  main.lua
util/build-sample-browser/player/: index.html  mockup.html  romdata.js  samplehost.html
util/host/: create.lua  main.lua
util/host-android-ant-libmoai/: Android.mk  MoaiTarget.mk  config.lua  main.lua
util/host-android-gradle/: main.lua
util/host-windows-phone-vs2013/: main.lua
(+60 files in other folders)
